# crypt-php

./: .gitignore  CMakeLists.txt  MULTI_PLATFORM.md  README.md  setup_resources.sh
.github/workflows/: build.yml
scripts/: package_resources.py
src/: CryptPHP.cpp  CryptPHP.h  FileUtil.cpp  FileUtil.h  ResourceManager.cpp  ResourceManager.h  main.cpp
